syntax = "proto3";

package knoway.listeners.v1alpha1;

import "google/protobuf/any.proto";

option go_package = "knoway.dev/api/listeners/v1alpha1";

message ListenerFilter {
    string name                = 1;
    google.protobuf.Any config = 2;
}

message ChatCompletionListener {
    string name                           = 1;
    repeated ListenerFilter filters       = 2;
    repeated string pick_request_headers  = 3;
    repeated string pick_response_headers = 4;
}
